feat: Enhance chat UI with mobile responsiveness and style updates
- Updated chat card styles for better mobile display, including responsive margins and font sizes.
- Adjusted message rendering to include mobile-specific styles.
- Improved overall layout with flexbox adjustments and consistent padding.
- Refactored chat application structure for clarity and maintainability.
- Incremented version number to 0.3 in pyproject.toml.

--- a/_proc/4-ChatApp.ipynb
+++ b/_proc/4-ChatApp.ipynb
@@ -51,8 +51,8 @@
        ">                     session.Message]]]=None, bg_color:str='#1a1a1a',\n",
        ">                     header_style:str='text-align: center; padding: 1em; color:\n",
        ">                     white;', container_style:Optional[str]=None,\n",
-       ">                     ws_endpoint:str='/ws', markdown_enabled:bool=True,\n",
-       ">                     syntax_highlighting:bool=True,\n",
+       ">                     ws_endpoint:str='/ws', chat_endpoint:str='/chat',\n",
+       ">                     markdown_enabled:bool=True, syntax_highlighting:bool=True,\n",
        ">                     highlight_langs:List[str]=<factory>,\n",
        ">                     spinner_css:Optional[str]=None)\n",
        "\n",
@@ -68,8 +68,8 @@
        ">                     session.Message]]]=None, bg_color:str='#1a1a1a',\n",
        ">                     header_style:str='text-align: center; padding: 1em; color:\n",
        ">                     white;', container_style:Optional[str]=None,\n",
-       ">                     ws_endpoint:str='/ws', markdown_enabled:bool=True,\n",
-       ">                     syntax_highlighting:bool=True,\n",
+       ">                     ws_endpoint:str='/ws', chat_endpoint:str='/chat',\n",
+       ">                     markdown_enabled:bool=True, syntax_highlighting:bool=True,\n",
        ">                     highlight_langs:List[str]=<factory>,\n",
        ">                     spinner_css:Optional[str]=None)\n",
        "\n",
@@ -450,32 +450,46 @@
      "data": {
       "text/markdown": [
        "<div>\n",
-       "  <div id=\"chat-cards\" class=\"chat-cards\" style=\"display: flex; flex-direction: column; gap: 10px;\">\n",
-       "    <div style=\"\n",
+       "  <div id=\"chat-cards\" class=\"chat-cards\" style=\"display: flex; flex-direction: column; gap: 1em; margin: 3em;\">\n",
+       "    <style>\n",
+       "        @media (max-width: 768px) {\n",
+       "            .chat-card {\n",
+       "                font-size: 16px !important;\n",
+       "            }\n",
+       "        }\n",
+       "        </style>\n",
+       "    <style>\n",
+       "        @media (max-width: 768px) {\n",
+       "            .chat-cards {\n",
+       "                margin: 1em !important;\n",
+       "            }\n",
+       "        }\n",
+       "        </style>\n",
+       "    <div class=\"chat-card\" style=\"\n",
        "        background: #1C0069; color: #FFFFFF; padding: 10px; font-size: 1.5em; \n",
-       "        width: 60%; align-self: center; \n",
-       "        text-align: right; border-radius: 1em; \n",
+       "        max-width: min(60%, 80%); align-self: flex-end; \n",
+       "        text-align: right; border-radius: 1em 1em 0em 1em; \n",
        "        padding: 1.25em\">\n",
-       "<span style=\"font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;\"><u>🗣️ User: </u></span>      <div class=\"marked\" style=\"white-space: pre-wrap;\">Hello!</div>\n",
+       "<span style=\"font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;\"><u>🗣️ User: </u></span>      <div class=\"marked\" style=\"white-space: normal;\">Hello!</div>\n",
        "    </div>\n",
-       "    <div style=\"\n",
+       "    <div class=\"chat-card\" style=\"\n",
        "        background: #004539; color: #FFFFFF; padding: 10px; font-size: 1.5em; \n",
-       "        width: 60%; align-self: center; \n",
-       "        text-align: left; border-radius: 1em; \n",
+       "        max-width: min(60%, 80%); align-self: flex-start; \n",
+       "        text-align: left; border-radius: 1em 1em 1em 0em; \n",
        "        padding: 1.25em\">\n",
-       "<span style=\"font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;\"><u>🕵️‍♂️ Assistant: </u></span>      <div class=\"marked\" style=\"white-space: pre-wrap;\">Hi there! How can I help?</div>\n",
+       "<span style=\"font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;\"><u>🕵️‍♂️ Assistant: </u></span>      <div class=\"marked\" style=\"white-space: normal;\">Hi there! How can I help?</div>\n",
        "    </div>\n",
-       "    <div style=\"\n",
+       "    <div class=\"chat-card\" style=\"\n",
        "        background: #004539; color: #FFFFFF; padding: 10px; font-size: 1.5em; \n",
-       "        width: 60%; align-self: center; \n",
-       "        text-align: left; border-radius: 1em; \n",
+       "        max-width: min(60%, 80%); align-self: flex-start; \n",
+       "        text-align: left; border-radius: 1em 1em 1em 0em; \n",
        "        padding: 1.25em\">\n",
        "🕵️‍♂️ Assistant: <span class=\"spinner\"></span>    </div>\n",
        "  </div>\n",
        "<script>if (window.htmx) htmx.process(document.body)</script></div>\n"
       ],
       "text/plain": [
-       "div((div((span((u(('🗣️ User: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div(('Hello!',),{'class': 'marked', 'style': 'white-space: pre-wrap;'})),{'style': '\\n        background: #1C0069; color: #FFFFFF; padding: 10px; font-size: 1.5em; \\n        width: 60%; align-self: center; \\n        text-align: right; border-radius: 1em; \\n        padding: 1.25em'}), div((span((u(('🕵️\\u200d♂️ Assistant: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div(('Hi there! How can I help?',),{'class': 'marked', 'style': 'white-space: pre-wrap;'})),{'style': '\\n        background: #004539; color: #FFFFFF; padding: 10px; font-size: 1.5em; \\n        width: 60%; align-self: center; \\n        text-align: left; border-radius: 1em; \\n        padding: 1.25em'}), div(('🕵️\\u200d♂️ Assistant: ', span((),{'class': 'spinner'})),{'style': '\\n        background: #004539; color: #FFFFFF; padding: 10px; font-size: 1.5em; \\n        width: 60%; align-self: center; \\n        text-align: left; border-radius: 1em; \\n        padding: 1.25em'})),{'id': 'chat-cards', 'class': 'chat-cards', 'style': 'display: flex; flex-direction: column; gap: 10px;'})"
+       "div((style(('\\n        @media (max-width: 768px) {\\n            .chat-card {\\n                font-size: 16px !important;\\n            }\\n        }\\n        ',),{}), style(('\\n        @media (max-width: 768px) {\\n            .chat-cards {\\n                margin: 1em !important;\\n            }\\n        }\\n        ',),{}), div((span((u(('🗣️ User: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div(('Hello!',),{'class': 'marked', 'style': 'white-space: normal;'})),{'class': 'chat-card', 'style': '\\n        background: #1C0069; color: #FFFFFF; padding: 10px; font-size: 1.5em; \\n        max-width: min(60%, 80%); align-self: flex-end; \\n        text-align: right; border-radius: 1em 1em 0em 1em; \\n        padding: 1.25em'}), div((span((u(('🕵️\\u200d♂️ Assistant: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div(('Hi there! How can I help?',),{'class': 'marked', 'style': 'white-space: normal;'})),{'class': 'chat-card', 'style': '\\n        background: #004539; color: #FFFFFF; padding: 10px; font-size: 1.5em; \\n        max-width: min(60%, 80%); align-self: flex-start; \\n        text-align: left; border-radius: 1em 1em 1em 0em; \\n        padding: 1.25em'}), div(('🕵️\\u200d♂️ Assistant: ', span((),{'class': 'spinner'})),{'class': 'chat-card', 'style': '\\n        background: #004539; color: #FFFFFF; padding: 10px; font-size: 1.5em; \\n        max-width: min(60%, 80%); align-self: flex-start; \\n        text-align: left; border-radius: 1em 1em 1em 0em; \\n        padding: 1.25em'})),{'id': 'chat-cards', 'class': 'chat-cards', 'style': 'display: flex; flex-direction: column; gap: 1em; margin: 3em;'})"
       ]
      },
      "execution_count": null,
