--- a/nbs/0-Card.ipynb
+++ b/nbs/0-Card.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "7335f114",
    "metadata": {},
    "outputs": [],
@@ -59,18 +59,19 @@
     "        assistant_color: str = \"#004539\",\n",
     "        user_emoji: str = \"🗣️\",\n",
     "        assistant_emoji: str = \"🕵️‍♂️\",\n",
-    "        width: str = \"60%\",\n",
+    "        max_width: str = \"80%\",\n",
+    "        card_max_width: str = \"60%\",\n",
     "        font_size: str = \"1.5em\",\n",
+    "        mobile_font_size: str = \"16px\",\n",
     "        padding: str = \"1.25em\",\n",
-    "        border_radius: str = \"1em\",\n",
     "        user_align: str = \"right\",\n",
     "        assistant_align: str = \"left\",\n",
-    "        user_self_align: str = \"center\",\n",
-    "        assistant_self_align: str = \"center\",\n",
+    "        user_self_align: str = \"flex-end\",\n",
+    "        assistant_self_align: str = \"flex-start\",\n",
     "        role_font_weight: str = \"bold\",\n",
     "        role_font_size: str = \"1.1em\",\n",
     "        role_margin_bottom: str = \"8px\",\n",
-    "        content_white_space: str = \"pre-wrap\",\n",
+    "        content_white_space: str = \"normal\",\n",
     "        spinner_class: str = \"spinner\",\n",
     "    ):\n",
     "        self.colors = {\n",
@@ -85,11 +86,14 @@
     "            \"Assistant\": {\"text\": assistant_align, \"self\": assistant_self_align},\n",
     "        }\n",
     "\n",
+    "        self.border_radii = {\"User\": \"1em 1em 0em 1em\", \"Assistant\": \"1em 1em 1em 0em\"}\n",
+    "\n",
     "        # Style configuration\n",
-    "        self.width = width\n",
+    "        self.card_max_width = card_max_width\n",
+    "        self.max_width = max_width\n",
     "        self.font_size = font_size\n",
+    "        self.mobile_font_size = mobile_font_size\n",
     "        self.padding = padding\n",
-    "        self.border_radius = border_radius\n",
     "        self.role_font_weight = role_font_weight\n",
     "        self.role_font_size = role_font_size\n",
     "        self.role_margin_bottom = role_margin_bottom\n",
@@ -99,8 +103,8 @@
     "        # Build style template\n",
     "        self.style_template = f\"\"\"\n",
     "        background: {{bg}}; color: {{text_color}}; padding: 10px; font-size: {self.font_size}; \n",
-    "        width: {self.width}; align-self: {{self_align}}; \n",
-    "        text-align: {{text_align}}; border-radius: {self.border_radius}; \n",
+    "        max-width: min({self.card_max_width}, {self.max_width}); align-self: {{self_align}}; \n",
+    "        text-align: {{text_align}}; border-radius: {{border_radius}}; \n",
     "        padding: {self.padding}\"\"\"\n",
     "\n",
     "    def _get_text_color(self, bg_color: str) -> str:\n",
@@ -134,11 +138,22 @@
     "            text_color=self._get_text_color(bg_color),\n",
     "            self_align=self.alignments[role][\"self\"],\n",
     "            text_align=self.alignments[role][\"text\"],\n",
+    "            border_radius=self.border_radii[role],\n",
     "        )\n",
     "\n",
     "    def _get_role_style(self) -> str:\n",
     "        \"\"\"Generate CSS style string for role labels.\"\"\"\n",
     "        return f\"font-weight: {self.role_font_weight}; font-size: {self.role_font_size}; display: block; margin-bottom: {self.role_margin_bottom};\"\n",
+    "\n",
+    "    def get_mobile_styles(self) -> str:\n",
+    "        \"\"\"Generate CSS media query for mobile devices.\"\"\"\n",
+    "        return f\"\"\"\n",
+    "        @media (max-width: 768px) {{\n",
+    "            .chat-card {{\n",
+    "                font-size: {self.mobile_font_size} !important;\n",
+    "            }}\n",
+    "        }}\n",
+    "        \"\"\"\n",
     "\n",
     "    def render(self, data: dict):\n",
     "        \"\"\"\n",
@@ -162,7 +177,7 @@
     "\n",
     "        if pending:\n",
     "            spinner = Span(cls=self.spinner_class)\n",
-    "            return Div(f\"{emoji} {role}: \", spinner, style=style)\n",
+    "            return Div(f\"{emoji} {role}: \", spinner, style=style, cls=\"chat-card\")\n",
     "\n",
     "        # Add 'marked' class to enable markdown rendering\n",
     "        return Div(\n",
@@ -174,6 +189,7 @@
     "                content, cls=\"marked\", style=f\"white-space: {self.content_white_space};\"\n",
     "            ),\n",
     "            style=style,\n",
+    "            cls=\"chat-card\",\n",
     "        )\n",
     "\n",
     "    def __call__(self, data: dict):\n",
@@ -183,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "id": "7f6c77a7",
    "metadata": {},
    "outputs": [
@@ -191,16 +207,20 @@
      "data": {
       "text/markdown": [
        "<div>\n",
-       "  <div style=\"background: #272727; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: right; border-radius: 1em; padding: 1.25em\">\n",
+       "  <div style=\"\n",
+       "        background: #272727; color: #FFFFFF; padding: 10px; font-size: 1.5em; \n",
+       "        max-width: min(60%, 80%); align-self: flex-end; \n",
+       "        text-align: right; border-radius: 1em; \n",
+       "        padding: 1.25em\">\n",
        "<span style=\"font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;\"><u>🗣️ User: </u></span>    <div class=\"marked\" style=\"white-space: pre-wrap;\">Hello, how are you?</div>\n",
        "  </div>\n",
        "<script>if (window.htmx) htmx.process(document.body)</script></div>\n"
       ],
       "text/plain": [
-       "div((span((u(('🗣️ User: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div(('Hello, how are you?',),{'class': 'marked', 'style': 'white-space: pre-wrap;'})),{'style': 'background: #272727; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: right; border-radius: 1em; padding: 1.25em'})"
+       "div((span((u(('🗣️ User: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div(('Hello, how are you?',),{'class': 'marked', 'style': 'white-space: pre-wrap;'})),{'style': '\\n        background: #272727; color: #FFFFFF; padding: 10px; font-size: 1.5em; \\n        max-width: min(60%, 80%); align-self: flex-end; \\n        text-align: right; border-radius: 1em; \\n        padding: 1.25em'})"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "id": "1994e37e",
    "metadata": {},
    "outputs": [
@@ -222,16 +242,20 @@
      "data": {
       "text/markdown": [
        "<div>\n",
-       "  <div style=\"background: #3B3B3B; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: left; border-radius: 1em; padding: 1.25em\">\n",
+       "  <div style=\"\n",
+       "        background: #004539; color: #FFFFFF; padding: 10px; font-size: 1.5em; \n",
+       "        max-width: min(60%, 80%); align-self: flex-start; \n",
+       "        text-align: left; border-radius: 1em; \n",
+       "        padding: 1.25em\">\n",
        "<span style=\"font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;\"><u>🕵️‍♂️ Assistant: </u></span>    <div class=\"marked\" style=\"white-space: pre-wrap;\">I'm doing well, thank you!</div>\n",
        "  </div>\n",
        "<script>if (window.htmx) htmx.process(document.body)</script></div>\n"
       ],
       "text/plain": [
-       "div((span((u(('🕵️\\u200d♂️ Assistant: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div((\"I'm doing well, thank you!\",),{'class': 'marked', 'style': 'white-space: pre-wrap;'})),{'style': 'background: #3B3B3B; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: left; border-radius: 1em; padding: 1.25em'})"
+       "div((span((u(('🕵️\\u200d♂️ Assistant: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div((\"I'm doing well, thank you!\",),{'class': 'marked', 'style': 'white-space: pre-wrap;'})),{'style': '\\n        background: #004539; color: #FFFFFF; padding: 10px; font-size: 1.5em; \\n        max-width: min(60%, 80%); align-self: flex-start; \\n        text-align: left; border-radius: 1em; \\n        padding: 1.25em'})"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "5fbb6fbe",
    "metadata": {},
    "outputs": [],
@@ -254,6 +278,7 @@
     "\n",
     "def render_chat_list(messages: List[Dict[str, str]], ChatCard: ChatCard):\n",
     "    return Div(\n",
+    "        Style(ChatCard.get_mobile_styles()),\n",
     "        *[ChatCard(m) for m in messages],\n",
     "        id=CHAT_DIV_ID,\n",
     "        cls=\"chat-cards\",\n",
@@ -263,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "id": "87917dab",
    "metadata": {},
    "outputs": [
@@ -272,20 +297,28 @@
       "text/markdown": [
        "<div>\n",
        "  <div id=\"chat-cards\" class=\"chat-cards\" style=\"display: flex; flex-direction: column; gap: 10px;\">\n",
-       "    <div style=\"background: #272727; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: right; border-radius: 1em; padding: 1.25em\">\n",
+       "    <div style=\"\n",
+       "        background: #272727; color: #FFFFFF; padding: 10px; font-size: 1.5em; \n",
+       "        max-width: min(60%, 80%); align-self: flex-end; \n",
+       "        text-align: right; border-radius: 1em; \n",
+       "        padding: 1.25em\">\n",
        "<span style=\"font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;\"><u>🗣️ User: </u></span>      <div class=\"marked\" style=\"white-space: pre-wrap;\">Hello, how are you?</div>\n",
        "    </div>\n",
-       "    <div style=\"background: #3B3B3B; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: left; border-radius: 1em; padding: 1.25em\">\n",
+       "    <div style=\"\n",
+       "        background: #004539; color: #FFFFFF; padding: 10px; font-size: 1.5em; \n",
+       "        max-width: min(60%, 80%); align-self: flex-start; \n",
+       "        text-align: left; border-radius: 1em; \n",
+       "        padding: 1.25em\">\n",
        "<span style=\"font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;\"><u>🕵️‍♂️ Assistant: </u></span>      <div class=\"marked\" style=\"white-space: pre-wrap;\">I'm doing well, thank you!</div>\n",
        "    </div>\n",
        "  </div>\n",
        "<script>if (window.htmx) htmx.process(document.body)</script></div>\n"
       ],
       "text/plain": [
-       "div((div((span((u(('🗣️ User: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div(('Hello, how are you?',),{'class': 'marked', 'style': 'white-space: pre-wrap;'})),{'style': 'background: #272727; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: right; border-radius: 1em; padding: 1.25em'}), div((span((u(('🕵️\\u200d♂️ Assistant: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div((\"I'm doing well, thank you!\",),{'class': 'marked', 'style': 'white-space: pre-wrap;'})),{'style': 'background: #3B3B3B; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: left; border-radius: 1em; padding: 1.25em'})),{'id': 'chat-cards', 'class': 'chat-cards', 'style': 'display: flex; flex-direction: column; gap: 10px;'})"
+       "div((div((span((u(('🗣️ User: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div(('Hello, how are you?',),{'class': 'marked', 'style': 'white-space: pre-wrap;'})),{'style': '\\n        background: #272727; color: #FFFFFF; padding: 10px; font-size: 1.5em; \\n        max-width: min(60%, 80%); align-self: flex-end; \\n        text-align: right; border-radius: 1em; \\n        padding: 1.25em'}), div((span((u(('🕵️\\u200d♂️ Assistant: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div((\"I'm doing well, thank you!\",),{'class': 'marked', 'style': 'white-space: pre-wrap;'})),{'style': '\\n        background: #004539; color: #FFFFFF; padding: 10px; font-size: 1.5em; \\n        max-width: min(60%, 80%); align-self: flex-start; \\n        text-align: left; border-radius: 1em; \\n        padding: 1.25em'})),{'id': 'chat-cards', 'class': 'chat-cards', 'style': 'display: flex; flex-direction: column; gap: 10px;'})"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "id": "a657b207",
    "metadata": {},
    "outputs": [],
@@ -313,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "id": "a96bc19c",
    "metadata": {},
    "outputs": [
@@ -328,7 +361,7 @@
        "input((),{'placeholder': 'Type a message...', 'autofocus': True, 'id': 'msg', 'style': 'width: 60%; max-width: 600px; padding: 0.75em; font-size: 1em; border-radius: 0.5em', 'name': 'msg'})"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
