--- a/nbs/4-ChatApp.ipynb
+++ b/nbs/4-ChatApp.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "37e4c289",
    "metadata": {},
    "outputs": [],
@@ -170,6 +170,9 @@
     "        # Add spinner styles\n",
     "        headers.append(Style(self.config.get_spinner_style()))\n",
     "\n",
+    "        # Add mobile responsive styles from ChatCard\n",
+    "        headers.append(Style(self.renderer.card.get_mobile_styles()))\n",
+    "\n",
     "        return FastHTML(exts=\"ws\", hdrs=tuple(headers))\n",
     "\n",
     "    def _get_initial_messages(self) -> List[Message]:\n",
@@ -182,22 +185,24 @@
     "        \"\"\"Register HTTP and WebSocket routes.\"\"\"\n",
     "\n",
     "        @self.app.route(self.config.chat_endpoint)\n",
-    "        def home():\n",
+    "        def chat():\n",
     "            \"\"\"Main chat interface.\"\"\"\n",
     "            initial_messages = self._get_initial_messages()\n",
     "\n",
     "            container_style = self.config.container_style or (\n",
     "                f\"font-family: monospace, sans-serif; margin: 0; padding: 0; \"\n",
-    "                f\"background: {self.config.bg_color}; min-height: 100vh;\"\n",
     "            )\n",
     "\n",
     "            return (\n",
     "                Title(self.config.page_title),\n",
-    "                Div(\n",
-    "                    H1(self.config.app_title, style=self.config.header_style),\n",
-    "                    self.renderer.render_messages(initial_messages),\n",
-    "                    self.renderer.render_form(),\n",
-    "                    style=container_style,\n",
+    "                Body(\n",
+    "                    Div(\n",
+    "                        H1(self.config.app_title, style=self.config.header_style),\n",
+    "                        self.renderer.render_messages(initial_messages),\n",
+    "                        self.renderer.render_form(),\n",
+    "                        style=container_style,\n",
+    "                    ),\n",
+    "                    style=\"background-color: #000\",\n",
     "                ),\n",
     "            )\n",
     "\n",
@@ -260,7 +265,7 @@
     "                    assistant_msg.id, content=full_response, pending=False\n",
     "                )\n",
     "                # Send updated message list to UI\n",
-    "                print(f\"📤 Sending chunk #{chunk_count}: {repr(chunk)}\")  # Debug\n",
+    "                # print(f\"📤 Sending chunk #{chunk_count}: {repr(chunk)}\")  # Debug\n",
     "                await send(self.renderer.render_messages(session.get_messages()))\n",
     "\n",
     "        except Exception as e:\n",
