--- a/nbs/5-Examples.ipynb
+++ b/nbs/5-Examples.ipynb
@@ -105,9 +105,8 @@
     "    assistant_color=\"#1A2332\",  # Dark blue\n",
     "    user_emoji=\"👨‍💼\",\n",
     "    assistant_emoji=\"🔮\",\n",
-    "    width=\"70%\",\n",
+    "    card_max_width=\"70%\",\n",
     "    font_size=\"1.3em\",\n",
-    "    border_radius=\"1.5em\",\n",
     ")\n",
     "\n",
     "custom_config = ChatAppConfig(\n",
@@ -362,7 +361,6 @@
     "            assistant_color=\"#1a1a3a\",\n",
     "            user_emoji=\"👤\",\n",
     "            assistant_emoji=\"🔍\",\n",
-    "            width=\"75%\",\n",
     "        ),\n",
     "        input_placeholder=\"Describe your supply chain issue...\",\n",
     "    ),\n",
@@ -485,7 +483,7 @@
      "output_type": "stream",
      "text": [
       "Session has 2 messages\n",
-      "Messages: [{'role': 'User', 'content': 'Test message', 'id': '4d4d6a07-08a0-417d-9b10-541cd4fc9950'}, {'role': 'Assistant', 'content': 'Test response', 'id': '2cb9f2db-6b12-4918-ba5a-49c9e63dcd27'}]\n"
+      "Messages: [{'role': 'User', 'content': 'Test message', 'id': 'c6e7fc89-8a0a-4a8e-b544-44f9d7d64919'}, {'role': 'Assistant', 'content': 'Test response', 'id': '09c7abc1-8b62-452e-9bb5-20fbb99790b6'}]\n"
      ]
     }
    ],
@@ -512,18 +510,40 @@
      "data": {
       "text/markdown": [
        "<div>\n",
-       "  <div id=\"chat-cards\" class=\"chat-cards\" style=\"display: flex; flex-direction: column; gap: 10px;\">\n",
-       "    <div style=\"background: #2a2a2a; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: right; border-radius: 1em; padding: 1.25em\">\n",
-       "<span style=\"font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;\"><u>🗣️ User: </u></span>      <div class=\"marked\" style=\"white-space: pre-wrap;\">Hello!</div>\n",
+       "  <div id=\"chat-cards\" class=\"chat-cards\" style=\"display: flex; flex-direction: column; gap: 1em; margin: 3em;\">\n",
+       "    <style>\n",
+       "        @media (max-width: 768px) {\n",
+       "            .chat-card {\n",
+       "                font-size: 16px !important;\n",
+       "            }\n",
+       "        }\n",
+       "        </style>\n",
+       "    <style>\n",
+       "        @media (max-width: 768px) {\n",
+       "            .chat-cards {\n",
+       "                margin: 1em !important;\n",
+       "            }\n",
+       "        }\n",
+       "        </style>\n",
+       "    <div class=\"chat-card\" style=\"\n",
+       "        background: #2a2a2a; color: #FFFFFF; padding: 10px; font-size: 1.5em; \n",
+       "        max-width: min(60%, 80%); align-self: flex-end; \n",
+       "        text-align: right; border-radius: 1em 1em 0em 1em; \n",
+       "        padding: 1.25em\">\n",
+       "<span style=\"font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;\"><u>🗣️ User: </u></span>      <div class=\"marked\" style=\"white-space: normal;\">Hello!</div>\n",
        "    </div>\n",
-       "    <div style=\"background: #3a3a3a; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: left; border-radius: 1em; padding: 1.25em\">\n",
-       "<span style=\"font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;\"><u>🕵️‍♂️ Assistant: </u></span>      <div class=\"marked\" style=\"white-space: pre-wrap;\">Hi! How can I help?</div>\n",
+       "    <div class=\"chat-card\" style=\"\n",
+       "        background: #3a3a3a; color: #FFFFFF; padding: 10px; font-size: 1.5em; \n",
+       "        max-width: min(60%, 80%); align-self: flex-start; \n",
+       "        text-align: left; border-radius: 1em 1em 1em 0em; \n",
+       "        padding: 1.25em\">\n",
+       "<span style=\"font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;\"><u>🕵️‍♂️ Assistant: </u></span>      <div class=\"marked\" style=\"white-space: normal;\">Hi! How can I help?</div>\n",
        "    </div>\n",
        "  </div>\n",
        "<script>if (window.htmx) htmx.process(document.body)</script></div>\n"
       ],
       "text/plain": [
-       "div((div((span((u(('🗣️ User: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div(('Hello!',),{'class': 'marked', 'style': 'white-space: pre-wrap;'})),{'style': 'background: #2a2a2a; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: right; border-radius: 1em; padding: 1.25em'}), div((span((u(('🕵️\\u200d♂️ Assistant: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div(('Hi! How can I help?',),{'class': 'marked', 'style': 'white-space: pre-wrap;'})),{'style': 'background: #3a3a3a; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: left; border-radius: 1em; padding: 1.25em'})),{'id': 'chat-cards', 'class': 'chat-cards', 'style': 'display: flex; flex-direction: column; gap: 10px;'})"
+       "div((style(('\\n        @media (max-width: 768px) {\\n            .chat-card {\\n                font-size: 16px !important;\\n            }\\n        }\\n        ',),{}), style(('\\n        @media (max-width: 768px) {\\n            .chat-cards {\\n                margin: 1em !important;\\n            }\\n        }\\n        ',),{}), div((span((u(('🗣️ User: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div(('Hello!',),{'class': 'marked', 'style': 'white-space: normal;'})),{'class': 'chat-card', 'style': '\\n        background: #2a2a2a; color: #FFFFFF; padding: 10px; font-size: 1.5em; \\n        max-width: min(60%, 80%); align-self: flex-end; \\n        text-align: right; border-radius: 1em 1em 0em 1em; \\n        padding: 1.25em'}), div((span((u(('🕵️\\u200d♂️ Assistant: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div(('Hi! How can I help?',),{'class': 'marked', 'style': 'white-space: normal;'})),{'class': 'chat-card', 'style': '\\n        background: #3a3a3a; color: #FFFFFF; padding: 10px; font-size: 1.5em; \\n        max-width: min(60%, 80%); align-self: flex-start; \\n        text-align: left; border-radius: 1em 1em 1em 0em; \\n        padding: 1.25em'})),{'id': 'chat-cards', 'class': 'chat-cards', 'style': 'display: flex; flex-direction: column; gap: 1em; margin: 3em;'})"
       ]
      },
      "execution_count": 11,
