--- a/nbs/6-JupyterExample.ipynb
+++ b/nbs/6-JupyterExample.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "87cf848d",
    "metadata": {},
    "outputs": [
@@ -131,13 +131,6 @@
      "text": [
       "✅ Server running at http://localhost:5005\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "📤 Sending chunk #1: '🤖 Response: TELL ME A HAIKU\\n⏱️ Waited 0.36s'\n"
-     ]
     }
    ],
    "source": [
@@ -162,7 +155,7 @@
     "\n",
     "# Create and start new server\n",
     "app = create_default_chat_app(responder=my_responder)\n",
-    "port = \"5005\"\n",
+    "port = 5005\n",
     "server = JupyUvi(app.get_app(), port=port)\n",
     "print(f\"✅ Server running at http://localhost:{port}\")"
    ]
@@ -184,31 +177,11 @@
    "execution_count": 3,
    "id": "36b50812",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<iframe src=\"http://localhost:5005/\" style=\"width: 100%; height: auto; border: none;\" onload=\"{\n",
-       "        let frame = this;\n",
-       "        window.addEventListener('message', function(e) {\n",
-       "            if (e.source !== frame.contentWindow) return; // Only proceed if the message is from this iframe\n",
-       "            if (e.data.height) frame.style.height = (e.data.height+1) + 'px';\n",
-       "        }, false);\n",
-       "    }\" allow=\"accelerometer; autoplay; camera; clipboard-read; clipboard-write; display-capture; encrypted-media; fullscreen; gamepad; geolocation; gyroscope; hid; identity-credentials-get; idle-detection; magnetometer; microphone; midi; payment; picture-in-picture; publickey-credentials-get; screen-wake-lock; serial; usb; web-share; xr-spatial-tracking\"></iframe> "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Display the app in an iframe within the notebook\n",
     "# Uncomment the line below to see the app embedded in the notebook\n",
-    "HTMX(port=5005)"
+    "# HTMX(port=5005)"
    ]
   },
   {
