--- a/_proc/0-Card.ipynb
+++ b/_proc/0-Card.ipynb
@@ -48,12 +48,13 @@
        "\n",
        ">      ChatCard (user_color:str='#1C0069', assistant_color:str='#004539',\n",
        ">                user_emoji:str='🗣️', assistant_emoji:str='🕵️\\u200d♂️',\n",
-       ">                width:str='60%', font_size:str='1.5em', padding:str='1.25em',\n",
-       ">                border_radius:str='1em', user_align:str='right',\n",
-       ">                assistant_align:str='left', user_self_align:str='center',\n",
-       ">                assistant_self_align:str='center', role_font_weight:str='bold',\n",
-       ">                role_font_size:str='1.1em', role_margin_bottom:str='8px',\n",
-       ">                content_white_space:str='pre-wrap',\n",
+       ">                max_width:str='80%', card_max_width:str='60%',\n",
+       ">                font_size:str='1.5em', mobile_font_size:str='16px',\n",
+       ">                padding:str='1.25em', user_align:str='right',\n",
+       ">                assistant_align:str='left', user_self_align:str='flex-end',\n",
+       ">                assistant_self_align:str='flex-start',\n",
+       ">                role_font_weight:str='bold', role_font_size:str='1.1em',\n",
+       ">                role_margin_bottom:str='8px', content_white_space:str='normal',\n",
        ">                spinner_class:str='spinner')\n",
        "\n",
        "*Initialize self.  See help(type(self)) for accurate signature.*"
@@ -65,12 +66,13 @@
        "\n",
        ">      ChatCard (user_color:str='#1C0069', assistant_color:str='#004539',\n",
        ">                user_emoji:str='🗣️', assistant_emoji:str='🕵️\\u200d♂️',\n",
-       ">                width:str='60%', font_size:str='1.5em', padding:str='1.25em',\n",
-       ">                border_radius:str='1em', user_align:str='right',\n",
-       ">                assistant_align:str='left', user_self_align:str='center',\n",
-       ">                assistant_self_align:str='center', role_font_weight:str='bold',\n",
-       ">                role_font_size:str='1.1em', role_margin_bottom:str='8px',\n",
-       ">                content_white_space:str='pre-wrap',\n",
+       ">                max_width:str='80%', card_max_width:str='60%',\n",
+       ">                font_size:str='1.5em', mobile_font_size:str='16px',\n",
+       ">                padding:str='1.25em', user_align:str='right',\n",
+       ">                assistant_align:str='left', user_self_align:str='flex-end',\n",
+       ">                assistant_self_align:str='flex-start',\n",
+       ">                role_font_weight:str='bold', role_font_size:str='1.1em',\n",
+       ">                role_margin_bottom:str='8px', content_white_space:str='normal',\n",
        ">                spinner_class:str='spinner')\n",
        "\n",
        "*Initialize self.  See help(type(self)) for accurate signature.*"
@@ -89,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "id": "7f6c77a7",
    "metadata": {
     "language": "python"
@@ -99,16 +101,20 @@
      "data": {
       "text/markdown": [
        "<div>\n",
-       "  <div style=\"background: #272727; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: right; border-radius: 1em; padding: 1.25em\">\n",
+       "  <div style=\"\n",
+       "        background: #272727; color: #FFFFFF; padding: 10px; font-size: 1.5em; \n",
+       "        max-width: min(60%, 80%); align-self: flex-end; \n",
+       "        text-align: right; border-radius: 1em; \n",
+       "        padding: 1.25em\">\n",
        "<span style=\"font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;\"><u>🗣️ User: </u></span>    <div class=\"marked\" style=\"white-space: pre-wrap;\">Hello, how are you?</div>\n",
        "  </div>\n",
        "<script>if (window.htmx) htmx.process(document.body)</script></div>\n"
       ],
       "text/plain": [
-       "div((span((u(('🗣️ User: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div(('Hello, how are you?',),{'class': 'marked', 'style': 'white-space: pre-wrap;'})),{'style': 'background: #272727; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: right; border-radius: 1em; padding: 1.25em'})"
+       "div((span((u(('🗣️ User: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div(('Hello, how are you?',),{'class': 'marked', 'style': 'white-space: pre-wrap;'})),{'style': '\\n        background: #272727; color: #FFFFFF; padding: 10px; font-size: 1.5em; \\n        max-width: min(60%, 80%); align-self: flex-end; \\n        text-align: right; border-radius: 1em; \\n        padding: 1.25em'})"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "id": "1994e37e",
    "metadata": {
     "language": "python"
@@ -132,16 +138,20 @@
      "data": {
       "text/markdown": [
        "<div>\n",
-       "  <div style=\"background: #3B3B3B; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: left; border-radius: 1em; padding: 1.25em\">\n",
+       "  <div style=\"\n",
+       "        background: #004539; color: #FFFFFF; padding: 10px; font-size: 1.5em; \n",
+       "        max-width: min(60%, 80%); align-self: flex-start; \n",
+       "        text-align: left; border-radius: 1em; \n",
+       "        padding: 1.25em\">\n",
        "<span style=\"font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;\"><u>🕵️‍♂️ Assistant: </u></span>    <div class=\"marked\" style=\"white-space: pre-wrap;\">I'm doing well, thank you!</div>\n",
        "  </div>\n",
        "<script>if (window.htmx) htmx.process(document.body)</script></div>\n"
       ],
       "text/plain": [
-       "div((span((u(('🕵️\\u200d♂️ Assistant: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div((\"I'm doing well, thank you!\",),{'class': 'marked', 'style': 'white-space: pre-wrap;'})),{'style': 'background: #3B3B3B; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: left; border-radius: 1em; padding: 1.25em'})"
+       "div((span((u(('🕵️\\u200d♂️ Assistant: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div((\"I'm doing well, thank you!\",),{'class': 'marked', 'style': 'white-space: pre-wrap;'})),{'style': '\\n        background: #004539; color: #FFFFFF; padding: 10px; font-size: 1.5em; \\n        max-width: min(60%, 80%); align-self: flex-start; \\n        text-align: left; border-radius: 1em; \\n        padding: 1.25em'})"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "id": "87917dab",
    "metadata": {
     "language": "python"
@@ -200,20 +210,28 @@
       "text/markdown": [
        "<div>\n",
        "  <div id=\"chat-cards\" class=\"chat-cards\" style=\"display: flex; flex-direction: column; gap: 10px;\">\n",
-       "    <div style=\"background: #272727; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: right; border-radius: 1em; padding: 1.25em\">\n",
+       "    <div style=\"\n",
+       "        background: #272727; color: #FFFFFF; padding: 10px; font-size: 1.5em; \n",
+       "        max-width: min(60%, 80%); align-self: flex-end; \n",
+       "        text-align: right; border-radius: 1em; \n",
+       "        padding: 1.25em\">\n",
        "<span style=\"font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;\"><u>🗣️ User: </u></span>      <div class=\"marked\" style=\"white-space: pre-wrap;\">Hello, how are you?</div>\n",
        "    </div>\n",
-       "    <div style=\"background: #3B3B3B; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: left; border-radius: 1em; padding: 1.25em\">\n",
+       "    <div style=\"\n",
+       "        background: #004539; color: #FFFFFF; padding: 10px; font-size: 1.5em; \n",
+       "        max-width: min(60%, 80%); align-self: flex-start; \n",
+       "        text-align: left; border-radius: 1em; \n",
+       "        padding: 1.25em\">\n",
        "<span style=\"font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;\"><u>🕵️‍♂️ Assistant: </u></span>      <div class=\"marked\" style=\"white-space: pre-wrap;\">I'm doing well, thank you!</div>\n",
        "    </div>\n",
        "  </div>\n",
        "<script>if (window.htmx) htmx.process(document.body)</script></div>\n"
       ],
       "text/plain": [
-       "div((div((span((u(('🗣️ User: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div(('Hello, how are you?',),{'class': 'marked', 'style': 'white-space: pre-wrap;'})),{'style': 'background: #272727; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: right; border-radius: 1em; padding: 1.25em'}), div((span((u(('🕵️\\u200d♂️ Assistant: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div((\"I'm doing well, thank you!\",),{'class': 'marked', 'style': 'white-space: pre-wrap;'})),{'style': 'background: #3B3B3B; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: left; border-radius: 1em; padding: 1.25em'})),{'id': 'chat-cards', 'class': 'chat-cards', 'style': 'display: flex; flex-direction: column; gap: 10px;'})"
+       "div((div((span((u(('🗣️ User: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div(('Hello, how are you?',),{'class': 'marked', 'style': 'white-space: pre-wrap;'})),{'style': '\\n        background: #272727; color: #FFFFFF; padding: 10px; font-size: 1.5em; \\n        max-width: min(60%, 80%); align-self: flex-end; \\n        text-align: right; border-radius: 1em; \\n        padding: 1.25em'}), div((span((u(('🕵️\\u200d♂️ Assistant: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div((\"I'm doing well, thank you!\",),{'class': 'marked', 'style': 'white-space: pre-wrap;'})),{'style': '\\n        background: #004539; color: #FFFFFF; padding: 10px; font-size: 1.5em; \\n        max-width: min(60%, 80%); align-self: flex-start; \\n        text-align: left; border-radius: 1em; \\n        padding: 1.25em'})),{'id': 'chat-cards', 'class': 'chat-cards', 'style': 'display: flex; flex-direction: column; gap: 10px;'})"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "id": "a96bc19c",
    "metadata": {
     "language": "python"
@@ -275,7 +293,7 @@
        "input((),{'placeholder': 'Type a message...', 'autofocus': True, 'id': 'msg', 'style': 'width: 60%; max-width: 600px; padding: 0.75em; font-size: 1em; border-radius: 0.5em', 'name': 'msg'})"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
