--- a/_proc/3-Renderer.ipynb
+++ b/_proc/3-Renderer.ipynb
@@ -97,17 +97,17 @@
      "data": {
       "text/markdown": [
        "<div>\n",
-       "  <div style=\"\n",
+       "  <div class=\"chat-card\" style=\"\n",
        "        background: #1C0069; color: #FFFFFF; padding: 10px; font-size: 1.5em; \n",
-       "        width: 60%; align-self: center; \n",
-       "        text-align: right; border-radius: 1em; \n",
+       "        max-width: min(60%, 80%); align-self: flex-end; \n",
+       "        text-align: right; border-radius: 1em 1em 0em 1em; \n",
        "        padding: 1.25em\">\n",
-       "<span style=\"font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;\"><u>🗣️ User: </u></span>    <div class=\"marked\" style=\"white-space: pre-wrap;\">Hello!</div>\n",
+       "<span style=\"font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;\"><u>🗣️ User: </u></span>    <div class=\"marked\" style=\"white-space: normal;\">Hello!</div>\n",
        "  </div>\n",
        "<script>if (window.htmx) htmx.process(document.body)</script></div>\n"
       ],
       "text/plain": [
-       "div((span((u(('🗣️ User: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div(('Hello!',),{'class': 'marked', 'style': 'white-space: pre-wrap;'})),{'style': '\\n        background: #1C0069; color: #FFFFFF; padding: 10px; font-size: 1.5em; \\n        width: 60%; align-self: center; \\n        text-align: right; border-radius: 1em; \\n        padding: 1.25em'})"
+       "div((span((u(('🗣️ User: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div(('Hello!',),{'class': 'marked', 'style': 'white-space: normal;'})),{'class': 'chat-card', 'style': '\\n        background: #1C0069; color: #FFFFFF; padding: 10px; font-size: 1.5em; \\n        max-width: min(60%, 80%); align-self: flex-end; \\n        text-align: right; border-radius: 1em 1em 0em 1em; \\n        padding: 1.25em'})"
       ]
      },
      "execution_count": null,
@@ -137,20 +137,32 @@
       "text/markdown": [
        "<div>\n",
        "  <div id=\"chat-cards\" class=\"chat-cards\" style=\"display: flex; flex-direction: column; gap: 10px;\">\n",
-       "    <div style=\"background: #272727; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: right; border-radius: 1em; padding: 1.25em\">\n",
-       "<span style=\"font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;\"><u>🗣️ User: </u></span>      <div class=\"marked\" style=\"white-space: pre-wrap;\">Hi there!</div>\n",
+       "    <div style=\"\n",
+       "        background: #1C0069; color: #FFFFFF; padding: 10px; font-size: 1.5em; \n",
+       "        max-width: min(60%, 80%); align-self: flex-end; \n",
+       "        text-align: right; border-radius: 1em 1em 0em 1em; \n",
+       "        padding: 1.25em\">\n",
+       "<span style=\"font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;\"><u>🗣️ User: </u></span>      <div class=\"marked\" style=\"white-space: normal;\">Hi there!</div>\n",
        "    </div>\n",
-       "    <div style=\"background: #3B3B3B; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: left; border-radius: 1em; padding: 1.25em\">\n",
-       "<span style=\"font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;\"><u>🕵️‍♂️ Assistant: </u></span>      <div class=\"marked\" style=\"white-space: pre-wrap;\">Hello! How can I help?</div>\n",
+       "    <div style=\"\n",
+       "        background: #004539; color: #FFFFFF; padding: 10px; font-size: 1.5em; \n",
+       "        max-width: min(60%, 80%); align-self: flex-start; \n",
+       "        text-align: left; border-radius: 1em 1em 1em 0em; \n",
+       "        padding: 1.25em\">\n",
+       "<span style=\"font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;\"><u>🕵️‍♂️ Assistant: </u></span>      <div class=\"marked\" style=\"white-space: normal;\">Hello! How can I help?</div>\n",
        "    </div>\n",
-       "    <div style=\"background: #272727; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: right; border-radius: 1em; padding: 1.25em\">\n",
-       "<span style=\"font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;\"><u>🗣️ User: </u></span>      <div class=\"marked\" style=\"white-space: pre-wrap;\">What's the weather?</div>\n",
+       "    <div style=\"\n",
+       "        background: #1C0069; color: #FFFFFF; padding: 10px; font-size: 1.5em; \n",
+       "        max-width: min(60%, 80%); align-self: flex-end; \n",
+       "        text-align: right; border-radius: 1em 1em 0em 1em; \n",
+       "        padding: 1.25em\">\n",
+       "<span style=\"font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;\"><u>🗣️ User: </u></span>      <div class=\"marked\" style=\"white-space: normal;\">What's the weather?</div>\n",
        "    </div>\n",
        "  </div>\n",
        "<script>if (window.htmx) htmx.process(document.body)</script></div>\n"
       ],
       "text/plain": [
-       "div((div((span((u(('🗣️ User: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div(('Hi there!',),{'class': 'marked', 'style': 'white-space: pre-wrap;'})),{'style': 'background: #272727; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: right; border-radius: 1em; padding: 1.25em'}), div((span((u(('🕵️\\u200d♂️ Assistant: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div(('Hello! How can I help?',),{'class': 'marked', 'style': 'white-space: pre-wrap;'})),{'style': 'background: #3B3B3B; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: left; border-radius: 1em; padding: 1.25em'}), div((span((u(('🗣️ User: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div((\"What's the weather?\",),{'class': 'marked', 'style': 'white-space: pre-wrap;'})),{'style': 'background: #272727; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: right; border-radius: 1em; padding: 1.25em'})),{'id': 'chat-cards', 'class': 'chat-cards', 'style': 'display: flex; flex-direction: column; gap: 10px;'})"
+       "div((div((span((u(('🗣️ User: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div(('Hi there!',),{'class': 'marked', 'style': 'white-space: normal;'})),{'style': '\\n        background: #1C0069; color: #FFFFFF; padding: 10px; font-size: 1.5em; \\n        max-width: min(60%, 80%); align-self: flex-end; \\n        text-align: right; border-radius: 1em 1em 0em 1em; \\n        padding: 1.25em'}), div((span((u(('🕵️\\u200d♂️ Assistant: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div(('Hello! How can I help?',),{'class': 'marked', 'style': 'white-space: normal;'})),{'style': '\\n        background: #004539; color: #FFFFFF; padding: 10px; font-size: 1.5em; \\n        max-width: min(60%, 80%); align-self: flex-start; \\n        text-align: left; border-radius: 1em 1em 1em 0em; \\n        padding: 1.25em'}), div((span((u(('🗣️ User: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div((\"What's the weather?\",),{'class': 'marked', 'style': 'white-space: normal;'})),{'style': '\\n        background: #1C0069; color: #FFFFFF; padding: 10px; font-size: 1.5em; \\n        max-width: min(60%, 80%); align-self: flex-end; \\n        text-align: right; border-radius: 1em 1em 0em 1em; \\n        padding: 1.25em'})),{'id': 'chat-cards', 'class': 'chat-cards', 'style': 'display: flex; flex-direction: column; gap: 10px;'})"
       ]
      },
      "execution_count": 6,
@@ -210,11 +222,11 @@
      "data": {
       "text/markdown": [
        "<div>\n",
-       "<form enctype=\"multipart/form-data\" ws-send id=\"form\" style=\"display: flex; justify-content: center; margin-top: 20px; padding: 20px;\" name=\"form\">    <input placeholder=\"Type a message...\" autofocus id=\"msg\" style=\"width: 60%; max-width: 600px; padding: 0.75em; font-size: 1em; border-radius: 0.5em\" name=\"msg\">\n",
+       "<form enctype=\"multipart/form-data\" hx-ext=\"ws\" ws-connect=\"/ws\" ws-send id=\"form\" style=\"display: flex; justify-content: center; margin-top: 20px; padding: 20px;\" name=\"form\">    <input placeholder=\"Type a message...\" autofocus id=\"msg\" style=\"width: 60%; max-width: 600px; padding: 0.75em; font-size: 1em; border-radius: 0.5em\" name=\"msg\">\n",
        "</form><script>if (window.htmx) htmx.process(document.body)</script></div>\n"
       ],
       "text/plain": [
-       "form((input((),{'placeholder': 'Type a message...', 'autofocus': True, 'id': 'msg', 'style': 'width: 60%; max-width: 600px; padding: 0.75em; font-size: 1em; border-radius: 0.5em', 'name': 'msg'}),),{'enctype': 'multipart/form-data', 'ws-send': True, 'id': 'form', 'style': 'display: flex; justify-content: center; margin-top: 20px; padding: 20px;', 'name': 'form'})"
+       "form((input((),{'placeholder': 'Type a message...', 'autofocus': True, 'id': 'msg', 'style': 'width: 60%; max-width: 600px; padding: 0.75em; font-size: 1em; border-radius: 0.5em', 'name': 'msg'}),),{'enctype': 'multipart/form-data', 'hx-ext': 'ws', 'ws-connect': '/ws', 'ws-send': True, 'id': 'form', 'style': 'display: flex; justify-content: center; margin-top: 20px; padding: 20px;', 'name': 'form'})"
       ]
      },
      "execution_count": 8,
@@ -230,49 +242,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6ab36736",
-   "metadata": {
-    "language": "python"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "<div>\n",
-       "  <div>\n",
-       "    <h1 style=\"text-align: center; padding: 1em;\">My Custom Chat</h1>\n",
-       "    <div id=\"chat-cards\" class=\"chat-cards\" style=\"display: flex; flex-direction: column; gap: 10px;\">\n",
-       "      <div style=\"background: #272727; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: right; border-radius: 1em; padding: 1.25em\">\n",
-       "<span style=\"font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;\"><u>🗣️ User: </u></span>        <div class=\"marked\" style=\"white-space: pre-wrap;\">Hi there!</div>\n",
-       "      </div>\n",
-       "      <div style=\"background: #3B3B3B; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: left; border-radius: 1em; padding: 1.25em\">\n",
-       "<span style=\"font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;\"><u>🕵️‍♂️ Assistant: </u></span>        <div class=\"marked\" style=\"white-space: pre-wrap;\">Hello! How can I help?</div>\n",
-       "      </div>\n",
-       "      <div style=\"background: #272727; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: right; border-radius: 1em; padding: 1.25em\">\n",
-       "<span style=\"font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;\"><u>🗣️ User: </u></span>        <div class=\"marked\" style=\"white-space: pre-wrap;\">What's the weather?</div>\n",
-       "      </div>\n",
-       "    </div>\n",
-       "<form enctype=\"multipart/form-data\" ws-send id=\"form\" style=\"display: flex; justify-content: center; margin-top: 20px; padding: 20px;\" name=\"form\">      <input placeholder=\"Type a message...\" autofocus id=\"msg\" style=\"width: 60%; max-width: 600px; padding: 0.75em; font-size: 1em; border-radius: 0.5em\" name=\"msg\">\n",
-       "</form>  </div>\n",
-       "<script>if (window.htmx) htmx.process(document.body)</script></div>\n"
-      ],
-      "text/plain": [
-       "div((h1(('My Custom Chat',),{'style': 'text-align: center; padding: 1em;'}), div((div((span((u(('🗣️ User: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div(('Hi there!',),{'class': 'marked', 'style': 'white-space: pre-wrap;'})),{'style': 'background: #272727; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: right; border-radius: 1em; padding: 1.25em'}), div((span((u(('🕵️\\u200d♂️ Assistant: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div(('Hello! How can I help?',),{'class': 'marked', 'style': 'white-space: pre-wrap;'})),{'style': 'background: #3B3B3B; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: left; border-radius: 1em; padding: 1.25em'}), div((span((u(('🗣️ User: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div((\"What's the weather?\",),{'class': 'marked', 'style': 'white-space: pre-wrap;'})),{'style': 'background: #272727; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: right; border-radius: 1em; padding: 1.25em'})),{'id': 'chat-cards', 'class': 'chat-cards', 'style': 'display: flex; flex-direction: column; gap: 10px;'}), form((input((),{'placeholder': 'Type a message...', 'autofocus': True, 'id': 'msg', 'style': 'width: 60%; max-width: 600px; padding: 0.75em; font-size: 1em; border-radius: 0.5em', 'name': 'msg'}),),{'enctype': 'multipart/form-data', 'ws-send': True, 'id': 'form', 'style': 'display: flex; justify-content: center; margin-top: 20px; padding: 20px;', 'name': 'form'})),{})"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Test complete interface\n",
-    "renderer.render_chat_interface(messages=messages, title=\"My Custom Chat\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
    "id": "1229137b",
    "metadata": {
     "language": "python"
@@ -283,23 +252,35 @@
       "text/markdown": [
        "<div>\n",
        "  <div id=\"chat-cards\" class=\"chat-cards\" style=\"display: flex; flex-direction: column; gap: 10px;\">\n",
-       "    <div style=\"background: #482F00; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: right; border-radius: 1em; padding: 1.25em\">\n",
-       "<span style=\"font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;\"><u>👤 User: </u></span>      <div class=\"marked\" style=\"white-space: pre-wrap;\">Hi there!</div>\n",
+       "    <div style=\"\n",
+       "        background: #482F00; color: #FFFFFF; padding: 10px; font-size: 1.5em; \n",
+       "        max-width: min(60%, 80%); align-self: flex-end; \n",
+       "        text-align: right; border-radius: 1em 1em 0em 1em; \n",
+       "        padding: 1.25em\">\n",
+       "<span style=\"font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;\"><u>👤 User: </u></span>      <div class=\"marked\" style=\"white-space: normal;\">Hi there!</div>\n",
        "    </div>\n",
-       "    <div style=\"background: #005460; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: left; border-radius: 1em; padding: 1.25em\">\n",
-       "<span style=\"font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;\"><u>🤖 Assistant: </u></span>      <div class=\"marked\" style=\"white-space: pre-wrap;\">Hello! How can I help?</div>\n",
+       "    <div style=\"\n",
+       "        background: #005460; color: #FFFFFF; padding: 10px; font-size: 1.5em; \n",
+       "        max-width: min(60%, 80%); align-self: flex-start; \n",
+       "        text-align: left; border-radius: 1em 1em 1em 0em; \n",
+       "        padding: 1.25em\">\n",
+       "<span style=\"font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;\"><u>🤖 Assistant: </u></span>      <div class=\"marked\" style=\"white-space: normal;\">Hello! How can I help?</div>\n",
        "    </div>\n",
-       "    <div style=\"background: #482F00; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: right; border-radius: 1em; padding: 1.25em\">\n",
-       "<span style=\"font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;\"><u>👤 User: </u></span>      <div class=\"marked\" style=\"white-space: pre-wrap;\">What's the weather?</div>\n",
+       "    <div style=\"\n",
+       "        background: #482F00; color: #FFFFFF; padding: 10px; font-size: 1.5em; \n",
+       "        max-width: min(60%, 80%); align-self: flex-end; \n",
+       "        text-align: right; border-radius: 1em 1em 0em 1em; \n",
+       "        padding: 1.25em\">\n",
+       "<span style=\"font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;\"><u>👤 User: </u></span>      <div class=\"marked\" style=\"white-space: normal;\">What's the weather?</div>\n",
        "    </div>\n",
        "  </div>\n",
        "<script>if (window.htmx) htmx.process(document.body)</script></div>\n"
       ],
       "text/plain": [
-       "div((div((span((u(('👤 User: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div(('Hi there!',),{'class': 'marked', 'style': 'white-space: pre-wrap;'})),{'style': 'background: #482F00; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: right; border-radius: 1em; padding: 1.25em'}), div((span((u(('🤖 Assistant: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div(('Hello! How can I help?',),{'class': 'marked', 'style': 'white-space: pre-wrap;'})),{'style': 'background: #005460; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: left; border-radius: 1em; padding: 1.25em'}), div((span((u(('👤 User: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div((\"What's the weather?\",),{'class': 'marked', 'style': 'white-space: pre-wrap;'})),{'style': 'background: #482F00; padding: 10px; font-size: 1.5em; width: 60%; align-self: center; text-align: right; border-radius: 1em; padding: 1.25em'})),{'id': 'chat-cards', 'class': 'chat-cards', 'style': 'display: flex; flex-direction: column; gap: 10px;'})"
+       "div((div((span((u(('👤 User: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div(('Hi there!',),{'class': 'marked', 'style': 'white-space: normal;'})),{'style': '\\n        background: #482F00; color: #FFFFFF; padding: 10px; font-size: 1.5em; \\n        max-width: min(60%, 80%); align-self: flex-end; \\n        text-align: right; border-radius: 1em 1em 0em 1em; \\n        padding: 1.25em'}), div((span((u(('🤖 Assistant: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div(('Hello! How can I help?',),{'class': 'marked', 'style': 'white-space: normal;'})),{'style': '\\n        background: #005460; color: #FFFFFF; padding: 10px; font-size: 1.5em; \\n        max-width: min(60%, 80%); align-self: flex-start; \\n        text-align: left; border-radius: 1em 1em 1em 0em; \\n        padding: 1.25em'}), div((span((u(('👤 User: ',),{}),),{'style': 'font-weight: bold; font-size: 1.1em; display: block; margin-bottom: 8px;'}), div((\"What's the weather?\",),{'class': 'marked', 'style': 'white-space: normal;'})),{'style': '\\n        background: #482F00; color: #FFFFFF; padding: 10px; font-size: 1.5em; \\n        max-width: min(60%, 80%); align-self: flex-end; \\n        text-align: right; border-radius: 1em 1em 0em 1em; \\n        padding: 1.25em'})),{'id': 'chat-cards', 'class': 'chat-cards', 'style': 'display: flex; flex-direction: column; gap: 10px;'})"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
